--- a/Heinen_DSC540_Weeks9&10.ipynb
+++ b/Heinen_DSC540_Weeks9&10.ipynb
@@ -220,7 +220,7 @@
    "source": [
     "# Execute \n",
     "c.execute(query)\n",
-    "use fetchall to loop through and print every row returned from the query. \n",
+    "#use fetchall to loop through and print every row returned from the query. \n",
     "for row in c.fetchall():\n",
     "    print(row)"
    ]
@@ -300,12 +300,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "50899e19-6038-4deb-82aa-e24497b3bc40",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2) Which age group has the maximum number of people. "
+    "# 2) Which age group has the maximum number of people. \n",
+    "\n",
+    "# write query \n",
+    "# use max operator. \n",
+    "query ='''\n",
+    "    SELECT age, MAX(count) AS max_count\n",
+    "    FROM (\n",
+    "        SELECT age, COUNT(*) AS count\n",
+    "        FROM persons\n",
+    "        GROUP BY age\n",
+    "        ) subquery\n",
+    "    '''\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "0ad1cab9-671d-4c62-8410-2acf43482e47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The highest number of people is 73 and came from 5 age group\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Loop through\n",
+    "for ppl, age in c.execute(query):\n",
+    "    # Print Result\n",
+    "    print(\"The highest number of people is {} and came from {} age group\".format(ppl, age))\n",
+    "    break"
    ]
   },
   {
