--- a/Heinen_DSC540_Weeks9&10.ipynb
+++ b/Heinen_DSC540_Weeks9&10.ipynb
@@ -349,7 +349,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3) How many people do not have a last name. "
+    "# 3) How many people do not have a last name. \n",
+    "\n",
+    "# Write Query \n",
+    "query = \"SELECT count(*) FROM persons WHERE last_name IS null\"\n",
+    "\n",
+    "# get response from db using curson execute\n",
+    "response = c.execute(query)\n",
+    "\n",
+    "# Loop through the response and print result \n",
+    "for row in response:\n",
+    "    print(row)\n"
    ]
   },
   {
