--- a/Heinen_DSC540_Weeks9&10.ipynb
+++ b/Heinen_DSC540_Weeks9&10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "36c9fb19-7ee3-4dda-a355-70f866bf2f5a",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "id": "404cde00-971b-4101-8fa7-c327bbbccd27",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "id": "b6c1e3c9-5bcd-45bc-957f-e025df0be49b",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "id": "6e720e76-03a0-4ea0-aefe-a9baabb1d6aa",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "id": "26010e18-a9b0-47c9-8c60-e39c6d79c903",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "id": "2fea525d-c47f-4f9c-bc7a-c0bfda880fca",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "a8509e59-3308-4f57-838f-3cb7c214f107",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "id": "fe3d6bff-e265-4f1f-9223-385760adf1ad",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "id": "4ae32155-856a-4c47-a0bb-e8de1b8d853b",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "id": "98d04a77-e09d-423f-b5c7-39af7a94df9a",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "id": "5650f063-abef-4ad1-ab72-1c793c2e8dce",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 14,
    "id": "50899e19-6038-4deb-82aa-e24497b3bc40",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 15,
    "id": "0ad1cab9-671d-4c62-8410-2acf43482e47",
    "metadata": {},
    "outputs": [
@@ -344,10 +344,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ff413470-091f-490e-a931-7256e07efece",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60,)\n"
+     ]
+    }
+   ],
    "source": [
     "# 3) How many people do not have a last name. \n",
     "\n",
@@ -364,53 +372,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "179c8c39-fd32-4594-b2e4-0f5f37fa87c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43 people have more than one pets\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4) How many people have more than one pet? "
+    "# 4) How many people have more than one pet? \n",
+    "\n",
+    "\n",
+    "# Write query \n",
+    "query = \"SELECT count(*) FROM (SELECT count(owner_id) FROM pets GROUP BY owner_id HAVING count(owner_id) >1)\"\n",
+    "\n",
+    "# get response from db using curson execute\n",
+    "response = c.execute(query)\n",
+    "\n",
+    "# Loop through response and print result\n",
+    "for row in response:\n",
+    "    # Print result for how many people have more than one pet. \n",
+    "    print(\"{} people have more than one pets\".format(row[0]))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "a5c3412c-164f-4ed8-b65f-05f644284e95",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(36,)\n"
+     ]
+    }
+   ],
    "source": [
-    "# 5) How many pets have recieved treatment? "
+    "# 5) How many pets have recieved treatment? \n",
+    "\n",
+    "# Write query \n",
+    "# treatment_done = 1\n",
+    "query = \"SELECT count(*) FROM pets WHERE treatment_done=1\"\n",
+    "\n",
+    "# get response from db using curson execute\n",
+    "response = c.execute(query)\n",
+    "\n",
+    "# Loop through the response and print result \n",
+    "for row in response:\n",
+    "    print(row)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "16ab2139-66f3-417e-ba7e-b97327280aac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 6) How many pets have recieved treatment, and the type of the pet is known?"
+    "# 6) How many pets have recieved treatment, and the type of the pet is known?\n",
+    "\n",
+    "# Write Query \n",
+    "# use and opperator \n",
+    "query = \"SELECT count(*) FROM pets WHERE treatment_done=1 AND pet_type IS NOT null\"\n",
+    "\n",
+    "# get response from db using curson execute\n",
+    "response = c.execute(query)\n",
+    "\n",
+    "# Loop through the response and print result \n",
+    "for row in response:\n",
+    "    print(row)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "59ff6a71-0602-4caa-81a7-f568affc4ee4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(49,)\n"
+     ]
+    }
+   ],
    "source": [
-    "# 7) How many pets are from the city called east port? "
+    "# 7) How many pets are from the city called east port? \n",
+    "\n",
+    "# Write Query\n",
+    "# Join persons and pets on owner_id\n",
+    "# use where operator to find city = east port\n",
+    "query = \"SELECT count(*) FROM pets JOIN persons ON pets.owner_id = persons.id WHERE persons.city='east port'\"\n",
+    "\n",
+    "# get response from db using cursor execute\n",
+    "response = c.execute(query)\n",
+    "\n",
+    "# Loop through the response and print result \n",
+    "for row in response:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "1a3c6ada-ee74-4684-89d5-70849200d09c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(11,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8) How many peta are from the city called east port, and who recieved treatment?\n",
+    "\n",
+    "# Write query \n",
+    "# Use and opperator \n",
+    "query = \"SELECT count(*) FROM pets JOIN persons ON pets.owner_id = persons.id WHERE persons.city='east port' AND pets.treatment_done=1\"\n",
+    "\n",
+    "# get response from db using cursor execute\n",
+    "response = c.execute(query)\n",
+    "\n",
+    "# Loop through the response and print result \n",
+    "for row in response:\n",
+    "    print(row)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a3c6ada-ee74-4684-89d5-70849200d09c",
+   "id": "6b84a654-2c8d-422f-bd6a-c063fa3a7703",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 8) How many peta are from the city called east port, and who recieved treatment?"
-   ]
+   "source": []
   }
  ],
  "metadata": {
