--- a/Term Project/Heinen_DSC540_Milestone_5.ipynb
+++ b/Term Project/Heinen_DSC540_Milestone_5.ipynb
@@ -55,7 +55,7 @@
     "ballparks = pd.read_csv('ballpark_data_web.csv')\n",
     "\n",
     "\n",
-    "# Connect to the SQLite database\n",
+    "# Connect to the SQLite database named carlos.db\n",
     "conn = sqlite3.connect('carlos.db')\n",
     "\n",
     "# Write the DataFrame to a SQL database\n",
@@ -2049,45 +2049,268 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "5fb69cdc-ea1d-4578-99ae-59913e8c5f24",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "# Create a connection to the SQLite database\n",
+    "engine = create_engine('sqlite:///carlos.db')\n",
+    "\n",
+    "# Read the table from the SQLite database into a pandas DataFrames to view them. \n",
+    "weather = pd.read_sql_table('weather', con=engine)\n",
+    "bip = pd.read_sql_table('carlos_balls_in_play', con=engine)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "e40465a4-8712-4f76-915e-979a4ccbe4c2",
+   "execution_count": 29,
+   "id": "5ed9ffaf-d1e1-4f58-86f8-1edcbd7a8cfb",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'engine' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Read the table from the SQLite database into a pandas DataFrame\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_sql_query(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSELECT * FROM carlos_balls_in_play\u001b[39m\u001b[38;5;124m'\u001b[39m, engine)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Print the DataFrame\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(df)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'engine' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pitch_type</th>\n",
+       "      <th>game_date</th>\n",
+       "      <th>release_speed</th>\n",
+       "      <th>release_pos_x</th>\n",
+       "      <th>release_pos_z</th>\n",
+       "      <th>pitcher_name</th>\n",
+       "      <th>pitcher_id</th>\n",
+       "      <th>ab_result</th>\n",
+       "      <th>pitch_zone_location</th>\n",
+       "      <th>description</th>\n",
+       "      <th>...</th>\n",
+       "      <th>post_away_score</th>\n",
+       "      <th>post_home_score</th>\n",
+       "      <th>post_bat_score</th>\n",
+       "      <th>post_fld_score</th>\n",
+       "      <th>if_fielding_alignment</th>\n",
+       "      <th>of_fielding_alignment</th>\n",
+       "      <th>spin_axis</th>\n",
+       "      <th>delta_home_win_exp</th>\n",
+       "      <th>delta_run_exp</th>\n",
+       "      <th>unix_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SI</td>\n",
+       "      <td>2018-06-19</td>\n",
+       "      <td>101.2</td>\n",
+       "      <td>-1.43</td>\n",
+       "      <td>6.18</td>\n",
+       "      <td>Hicks, Jordan</td>\n",
+       "      <td>663855</td>\n",
+       "      <td>field_out</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Carlos Santana grounds out, shortstop Yairo Mu...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>245.0</td>\n",
+       "      <td>-0.086</td>\n",
+       "      <td>-0.232</td>\n",
+       "      <td>1529452800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>FF</td>\n",
+       "      <td>2015-05-24</td>\n",
+       "      <td>100.9</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>6.34</td>\n",
+       "      <td>Chapman, Aroldis</td>\n",
+       "      <td>547973</td>\n",
+       "      <td>single</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Carlos Santana singles on a ground ball to cen...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.012</td>\n",
+       "      <td>0.578</td>\n",
+       "      <td>1432512000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SI</td>\n",
+       "      <td>2019-05-26</td>\n",
+       "      <td>100.5</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>6.66</td>\n",
+       "      <td>Alvarado, José</td>\n",
+       "      <td>621237</td>\n",
+       "      <td>force_out</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Carlos Santana grounds into a force out, field...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>-0.040</td>\n",
+       "      <td>-0.459</td>\n",
+       "      <td>1558915200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FF</td>\n",
+       "      <td>2023-06-03</td>\n",
+       "      <td>100.2</td>\n",
+       "      <td>-1.47</td>\n",
+       "      <td>6.24</td>\n",
+       "      <td>Hicks, Jordan</td>\n",
+       "      <td>663855</td>\n",
+       "      <td>single</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Carlos Santana singles on a fly ball to left f...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Strategic</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>0.064</td>\n",
+       "      <td>0.748</td>\n",
+       "      <td>1685836800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>FF</td>\n",
+       "      <td>2019-09-14</td>\n",
+       "      <td>100.1</td>\n",
+       "      <td>-1.55</td>\n",
+       "      <td>6.44</td>\n",
+       "      <td>Graterol, Brusdar</td>\n",
+       "      <td>660813</td>\n",
+       "      <td>field_out</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Carlos Santana grounds out, shortstop Jorge Po...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Infield shift</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>205.0</td>\n",
+       "      <td>-0.018</td>\n",
+       "      <td>-0.286</td>\n",
+       "      <td>1568505600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 59 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  pitch_type   game_date  release_speed  release_pos_x  release_pos_z  \\\n",
+       "0         SI  2018-06-19          101.2          -1.43           6.18   \n",
+       "1         FF  2015-05-24          100.9           0.84           6.34   \n",
+       "2         SI  2019-05-26          100.5           0.86           6.66   \n",
+       "3         FF  2023-06-03          100.2          -1.47           6.24   \n",
+       "4         FF  2019-09-14          100.1          -1.55           6.44   \n",
+       "\n",
+       "        pitcher_name  pitcher_id  ab_result  pitch_zone_location  \\\n",
+       "0      Hicks, Jordan      663855  field_out                    1   \n",
+       "1   Chapman, Aroldis      547973     single                    7   \n",
+       "2     Alvarado, José      621237  force_out                    9   \n",
+       "3      Hicks, Jordan      663855     single                    2   \n",
+       "4  Graterol, Brusdar      660813  field_out                   12   \n",
+       "\n",
+       "                                         description  ... post_away_score  \\\n",
+       "0  Carlos Santana grounds out, shortstop Yairo Mu...  ...               7   \n",
+       "1  Carlos Santana singles on a ground ball to cen...  ...               1   \n",
+       "2  Carlos Santana grounds into a force out, field...  ...               6   \n",
+       "3  Carlos Santana singles on a fly ball to left f...  ...               1   \n",
+       "4  Carlos Santana grounds out, shortstop Jorge Po...  ...               4   \n",
+       "\n",
+       "  post_home_score post_bat_score post_fld_score if_fielding_alignment  \\\n",
+       "0               6              6              7              Standard   \n",
+       "1               5              5              1              Standard   \n",
+       "2               3              3              6              Standard   \n",
+       "3               4              4              1             Strategic   \n",
+       "4               5              5              4         Infield shift   \n",
+       "\n",
+       "   of_fielding_alignment spin_axis  delta_home_win_exp  delta_run_exp  \\\n",
+       "0               Standard     245.0              -0.086         -0.232   \n",
+       "1               Standard       NaN               0.012          0.578   \n",
+       "2               Standard     143.0              -0.040         -0.459   \n",
+       "3               Standard     210.0               0.064          0.748   \n",
+       "4               Standard     205.0              -0.018         -0.286   \n",
+       "\n",
+       "    unix_time  \n",
+       "0  1529452800  \n",
+       "1  1432512000  \n",
+       "2  1558915200  \n",
+       "3  1685836800  \n",
+       "4  1568505600  \n",
+       "\n",
+       "[5 rows x 59 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Read the table from the SQLite database into a pandas DataFrame\n",
-    "df = pd.read_sql_query('SELECT * FROM carlos_balls_in_play', engine)\n",
-    "\n",
-    "# Print the DataFrame\n",
-    "print(df)"
+    "weather.head()\n",
+    "bip.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ed9ffaf-d1e1-4f58-86f8-1edcbd7a8cfb",
+   "id": "ec6c4461-94de-49cc-88dd-de039f2190e2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Write SQL query to join all tables into one for the purpose of making one large data set. \n",
+    "\n",
+    "query = ''' \n",
+    "SELECT *\n",
+    "FROM carlos_balls_in_play\n",
+    "INNER JOIN table2 ON table1.key1 = table2.key1 AND table1.key2 = table2.key2;"
+   ]
   }
  ],
  "metadata": {
