--- a/Term Project/Heinen_DSC540_Milestone_4_FULL_API_CALL.ipynb
+++ b/Term Project/Heinen_DSC540_Milestone_4_FULL_API_CALL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "6040a614-674e-48c4-a70f-d25c712b0d6b",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "4c18dd80-d667-4f5a-9bdc-45eba489151e",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "1881089e-6a70-41be-8df7-cc8e97157f2f",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "2c5feef9-21e2-45ad-bc61-aa72d5def3ce",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "9       Boston Red Sox[nb 3]         Open  42.35  -71.10    16  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "a7a63042-24bf-4a0a-a7a7-6309fac78d38",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "13f39157-9697-43be-b9fb-dff31672a57d",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
        "[10 rows x 59 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "id": "98f3fc3a-c6e7-469e-b350-3c77304ab30d",
    "metadata": {},
    "outputs": [],
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "id": "a5e747d3-a179-45d3-b555-7ebb61c14810",
    "metadata": {},
    "outputs": [
@@ -767,7 +767,7 @@
        "9        Detroit Tigers         det"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "id": "aee18a79-5dce-441c-b44e-7ed0925d5be7",
    "metadata": {},
    "outputs": [
@@ -889,7 +889,7 @@
        "9        Detroit Tigers         DET"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,6 +902,21 @@
     "# Preview transformation. \n",
     "\n",
     "ab_key.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5291fb37-31f8-4215-9260-6cb1ea6b2c3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write this df to csv for later use. \n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Assuming 'df' is the DataFrame you want to write to a CSV file\n",
+    "ab_key.to_csv('ab_key.csv', index=False)"
    ]
   },
   {
