--- a/Term Project/Heinen_DSC540_Milestone_5.ipynb
+++ b/Term Project/Heinen_DSC540_Milestone_5.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "id": "05f57458-2cb3-43c8-b15e-0b28bbcde2e0",
    "metadata": {},
    "outputs": [],
@@ -53,6 +53,7 @@
     "bip = pd.read_csv('carlos_balls_in_play.csv')\n",
     "weather = pd.read_csv('carlos_weather_from_api_no_duplicates.csv')\n",
     "ballparks = pd.read_csv('ballpark_data_web.csv')\n",
+    "ab_key = pd.read_csv('ab_key.csv')\n",
     "\n",
     "\n",
     "# Connect to the SQLite database named carlos.db\n",
@@ -62,6 +63,7 @@
     "bip.to_sql('carlos_balls_in_play', conn, if_exists='replace', index=False)\n",
     "weather.to_sql('weather', conn, if_exists='replace', index=False)\n",
     "ballparks.to_sql('ballparks', conn, if_exists='replace', index=False)\n",
+    "ab_key.to_sql('ab_key', conn, if_exists='replace', index=False)\n",
     "\n",
     "# Close the connection\n",
     "conn.close()"
@@ -2299,7 +2301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "ec6c4461-94de-49cc-88dd-de039f2190e2",
    "metadata": {},
    "outputs": [],
@@ -2309,8 +2311,72 @@
     "query = ''' \n",
     "SELECT *\n",
     "FROM carlos_balls_in_play\n",
-    "INNER JOIN table2 ON table1.key1 = table2.key1 AND table1.key2 = table2.key2;"
+    "INNER JOIN ab_key ON carlos_balls_in_play.home_team = ab_key.abreviation\n",
+    "INNER JOIN ballparks ON ab_key.team_name = ballparks.Team\n",
+    "INNER JOIN weather ON ballparks.lat = weather.lat AND ballparks.long = weather.lon AND carlos_balls_in_play.unix_time = weather.datetime;\n",
+    "'''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "5ba06909-8da2-4d9a-96cd-51d61f563d52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import packages. \n",
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Establish connection \n",
+    "# We have to re establish connection after the connection was closed above. \n",
+    "conn = sqlite3.connect(\"carlos.db\")  \n",
+    "\n",
+    "# Define the cursor as c, This will be used to execute SQL commands and queries. \n",
+    "c = conn.cursor()\n",
+    "\n",
+    "# Execute the query\n",
+    "#c.execute(query)\n",
+    "\n",
+    "# Fetch the results if needed\n",
+    "#carlos_data = c.fetchall()\n",
+    "\n",
+    "# Read the results of the SQL query into a DataFrame\n",
+    "carlos_data = pd.read_sql_query(query , conn)\n",
+    "\n",
+    "# Close the connection\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "0ef62ced-f596-4d78-8032-09fdbe15de49",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1942, 82)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "carlos_data.head()\n",
+    "carlos_data.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa0b3495-0fd6-40b0-b146-1b2ceea5828a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
