--- a/Term Project/Heinen_DSC540_Milestone_5.ipynb
+++ b/Term Project/Heinen_DSC540_Milestone_5.ipynb
@@ -3684,9 +3684,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ab50368b-e22e-4520-b013-af086c96fcd2",
+   "metadata": {},
+   "source": [
+    "As We can see by this heat map, Santana has some very high run expectancy in specific locations on the right and left side of the plate. This is likely due to Santana being able to pull the ball from both sides of the plate as a switch hitter. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6e71d3c-ce10-4812-9b22-a4df35256c57",
+   "id": "e1345ffe-9f9f-412d-b928-9faa4a5532c7",
    "metadata": {},
    "outputs": [],
    "source": []
