--- a/Heinen_DSC540_Weeks9&10.ipynb
+++ b/Heinen_DSC540_Weeks9&10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "id": "36c9fb19-7ee3-4dda-a355-70f866bf2f5a",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "id": "404cde00-971b-4101-8fa7-c327bbbccd27",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "id": "b6c1e3c9-5bcd-45bc-957f-e025df0be49b",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
     "        conn.execute(\"SELECT * FROM persons LIMIT 1\")\n",
     "       # If we are able to execute return true\n",
     "        return True\n",
-    "   # Exception handeling for programming error (This will trigger if the connection is closed. \n",
+    "   # Exception handeling for programming error (This will trigger if the connection is closed). \n",
     "    except sqlite3.ProgrammingError as e:\n",
     "       # Print connection closed \n",
     "        print(\"Connection closed {}\".format(e))\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 59,
    "id": "6e720e76-03a0-4ea0-aefe-a9baabb1d6aa",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "# Call is oppened function \n",
+    "# Call is opened function \n",
     "# pass conn\n",
     "# print result. \n",
     "print(is_opened(conn))"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "id": "26010e18-a9b0-47c9-8c60-e39c6d79c903",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "id": "2fea525d-c47f-4f9c-bc7a-c0bfda880fca",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
    "id": "a8509e59-3308-4f57-838f-3cb7c214f107",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "id": "fe3d6bff-e265-4f1f-9223-385760adf1ad",
    "metadata": {},
    "outputs": [],
@@ -140,12 +140,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "id": "4ae32155-856a-4c47-a0bb-e8de1b8d853b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write SQL statemtnt to query the count of people from the persons table \n",
+    "# write SQL statement to query the count of people from the persons table \n",
     "# grouped by age\n",
     "\n",
     "query = \"SELECT count(*), age FROM persons GROUP BY age\""
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
    "id": "98d04a77-e09d-423f-b5c7-39af7a94df9a",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "id": "5650f063-abef-4ad1-ab72-1c793c2e8dce",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 67,
    "id": "50899e19-6038-4deb-82aa-e24497b3bc40",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 68,
    "id": "0ad1cab9-671d-4c62-8410-2acf43482e47",
    "metadata": {},
    "outputs": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 69,
    "id": "ff413470-091f-490e-a931-7256e07efece",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
     "# Write Query \n",
     "query = \"SELECT count(*) FROM persons WHERE last_name IS null\"\n",
     "\n",
-    "# get response from db using curson execute\n",
+    "# get response from db using cursor execute\n",
     "response = c.execute(query)\n",
     "\n",
     "# Loop through the response and print result \n",
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 70,
    "id": "179c8c39-fd32-4594-b2e4-0f5f37fa87c4",
    "metadata": {},
    "outputs": [
@@ -391,7 +391,7 @@
     "# Write query \n",
     "query = \"SELECT count(*) FROM (SELECT count(owner_id) FROM pets GROUP BY owner_id HAVING count(owner_id) >1)\"\n",
     "\n",
-    "# get response from db using curson execute\n",
+    "# get response from db using cursor execute\n",
     "response = c.execute(query)\n",
     "\n",
     "# Loop through response and print result\n",
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 71,
    "id": "a5c3412c-164f-4ed8-b65f-05f644284e95",
    "metadata": {},
    "outputs": [
@@ -416,13 +416,13 @@
     }
    ],
    "source": [
-    "# 5) How many pets have recieved treatment? \n",
+    "# 5) How many pets have received treatment? \n",
     "\n",
     "# Write query \n",
     "# treatment_done = 1\n",
     "query = \"SELECT count(*) FROM pets WHERE treatment_done=1\"\n",
     "\n",
-    "# get response from db using curson execute\n",
+    "# get response from db using cursor execute\n",
     "response = c.execute(query)\n",
     "\n",
     "# Loop through the response and print result \n",
@@ -432,18 +432,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 72,
    "id": "16ab2139-66f3-417e-ba7e-b97327280aac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(16,)\n"
+     ]
+    }
+   ],
    "source": [
-    "# 6) How many pets have recieved treatment, and the type of the pet is known?\n",
+    "# 6) How many pets have received treatment, and the type of the pet is known?\n",
     "\n",
     "# Write Query \n",
     "# use and opperator \n",
     "query = \"SELECT count(*) FROM pets WHERE treatment_done=1 AND pet_type IS NOT null\"\n",
     "\n",
-    "# get response from db using curson execute\n",
+    "# get response from db using cursor execute\n",
     "response = c.execute(query)\n",
     "\n",
     "# Loop through the response and print result \n",
@@ -453,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 73,
    "id": "59ff6a71-0602-4caa-81a7-f568affc4ee4",
    "metadata": {},
    "outputs": [
@@ -483,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 74,
    "id": "1a3c6ada-ee74-4684-89d5-70849200d09c",
    "metadata": {},
    "outputs": [
@@ -496,10 +504,10 @@
     }
    ],
    "source": [
-    "# 8) How many peta are from the city called east port, and who recieved treatment?\n",
+    "# 8) How many pets are from the city called east port, and who received treatment?\n",
     "\n",
     "# Write query \n",
-    "# Use and opperator \n",
+    "# Use and operator \n",
     "query = \"SELECT count(*) FROM pets JOIN persons ON pets.owner_id = persons.id WHERE persons.city='east port' AND pets.treatment_done=1\"\n",
     "\n",
     "# get response from db using cursor execute\n",
